feat: Implementação Projeto Final

--- a/html/atividades/blogHostinger.html
+++ b/html/atividades/blogHostinger.html
@@ -538,7 +538,7 @@
                     </p>
                     <ul>
                         <li>
-                            Pesquisar diferentes campos da ciência da computação, focando no desenvolvimento web e no webdesign.
+                    `````        Pesquisar diferentes campos da ciência da computação, focando no desenvolvimento web e no webdesign.
                         </li>
                         <li>
                             Escolher uma especialidade que mais desperte interesse.
